authentication with jwt & implement HashProvider
