# src/modules/user/repositories/UsersDTO.ts
@@ -4,3 +4,8 @@ export interface ICreateUserDTO {
   password: string;
   driverLicense: string;
 }
+
+export interface IAuthenticateUserDTO {
+  email: string;
+  password: string;
+}
